--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.2.2",
     "vue-router": "^3.0.1",
     "vue-tantan-stack": "^1.0.0"
   },
